﻿v8.8
-----


v8.7.2
-----
: Fixed a bug that caused quicksell and instantsell buttons to not work correctly under some conditions
: Updated the look and feel of activity page highlights so that they're easier to read
: Fixed a bug where the highlighting process on activity pages would run over already highlighted items
: Fixed a bug that caused "1-click turn to gems" feature not to work correctly
: Optimized the option reset feature on the options page
: Updated wishlist highlighting for community hub pages

v8.7.1
-----
: Fixed a bug that caused some elements on the "Edit Profile" page not to load correctly
: Fixed a bug that caused Enhanced Steam to interact with other extensions incorrectly
: Dynamic storefront data will now draw from cached data when browsing over HTTPS

v8.7
-----
+ A huge amount of cache optimization - thanks JoiNNN!
+ Added a crowd-sourcing feature to gather HowLongToBeat data that shows up on store pages
+ Added an option to disable Steam's link filter, but please be careful!
+ User's "In Game" status on profile pages is now a link that takes you to that game's store page
+ Added an option to shorten tags to a single letter in order to save space
+ Added an option to display achievement progress on store pages (was previously not configurable)
: Updated the look and feel of highlighting and tags, updated default colors to more closely match Steam
: Updated the look and feel of the Enhanced Steam progress indicator
: Fixed a bug where activity page highlighting displayed incorrectly
: Fixed a bug that caused badge completion costs not to show if the user had numbers in their profile ID
: Fixed a bug that caused WSGF and HLTB data not to display on store pages

v8.6
-----
+ Added an item counter to both party's item selection in trade offer windows
+ Added a filter box to wishlist pages, making it easy to find games by name
+ Wishlist sort and filter options are now in a drop down menu, rather than links